# Derivatives-journey-pricing-and-understanding

./: README.md  pyproject.toml
src/: 01_Monte_carlo_pricing.ipynb  01_Stochastic_processes.ipynb  02_Black_Scholes_model.ipynb  02_Black_scholes_pricing.ipynb  03_Martingale.ipynb  03_Monte_carlo_pricing.ipynb  04_Option_pricing.ipynb  05_Greeks.ipynb  06_Volatility.ipynb
src/modules/: greeks.py  heston.py  pricings.py  simulations.py
